Actualizacion_Mi_Pagina 16_09_2021

--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Web Javier</title>
-    <script src="main.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id = "main">
         <div id= "box1"> </div>
+        
         <div id= "box2">
-            <div id = "text"> 
-                    BIENVENIDOS <br> A MI WEB
+            <div id = "text1"> 
+                Welcome to my <br> Website
+            </div>
+            <div id = "text2"> 
+                By Javier Sauza
             </div>
         </div>
 
