--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div  id = "box3">
             <div  id = "container">
                 <div id = "logo">
-                    <img src="LOGO.png"/>
+                    <img src="logo.png"/>
                 </div>
                 <div  id = "menu">
                       <ul>
